core/tooling/lsp/src/snapshots/wrela_lsp__tests__code_lens_references_count.snap
---
source: core/tooling/lsp/src/lib.rs
expression: lenses
---
[
    CodeLens {
        range: Range {
            start: Position {
                line: 1,
                character: 3,
            },
            end: Position {
                line: 1,
                character: 6,
            },
        },
        command: Some(
            Command {
                title: "References: 2",
                command: "wrela.codeLens.showReferences",
                arguments: None,
            },
        ),
        data: None,
    },
    CodeLens {
        range: Range {
            start: Position {
                line: 3,
                character: 3,
            },
            end: Position {
                line: 3,
                character: 7,
            },
        },
        command: Some(
            Command {
                title: "References: 0",
                command: "wrela.codeLens.showReferences",
                arguments: None,
            },
        ),
        data: None,
    },
]
