core/tooling/lsp/src/snapshots/wrela_lsp__tests__completion_members_after_dot.snap
---
source: core/tooling/lsp/src/lib.rs
assertion_line: 4869
expression: labels(items)
---
[
    "value",
]
