core/tooling/lsp/src/snapshots/wrela_lsp__tests__folding_ranges_basic.snap
---
source: core/tooling/lsp/src/lib.rs
expression: ranges
---
[
    FoldingRange {
        start_line: 0,
        start_character: None,
        end_line: 5,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 1,
        start_character: None,
        end_line: 5,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 2,
        start_character: None,
        end_line: 5,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 5,
        start_character: None,
        end_line: 8,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 6,
        start_character: None,
        end_line: 8,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
]
