core/tooling/lsp/src/snapshots/wrela_lsp__tests__formatting_trims_whitespace.snap
---
source: core/tooling/lsp/src/lib.rs
expression: formatted
---
"to main() -> Nothing:\n    x = 1\n"
