core/tooling/lsp/src/snapshots/wrela_lsp__tests__organize_imports_editing.snap
---
source: core/tooling/lsp/src/lib.rs
expression: edit
---
Some(
    WorkspaceEdit {
        changes: Some(
            {
                Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/main.wr",
                    query: None,
                    fragment: None,
                }: [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 0,
                                character: 0,
                            },
                            end: Position {
                                line: 1,
                                character: 21,
                            },
                        },
                        new_text: "use a, b, core from core",
                    },
                ],
            },
        ),
        document_changes: None,
        change_annotations: None,
    },
)
