core/tooling/lsp/src/snapshots/wrela_lsp__tests__workspace_references_and_rename.snap
---
source: core/tooling/lsp/src/lib.rs
expression: references
---
[
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "/b.wr",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 2,
                character: 8,
            },
            end: Position {
                line: 2,
                character: 9,
            },
        },
    },
    Location {
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "/b.wr",
            query: None,
            fragment: None,
        },
        range: Range {
            start: Position {
                line: 2,
                character: 12,
            },
            end: Position {
                line: 2,
                character: 13,
            },
        },
    },
]
